--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -15,6 +15,7 @@
     "gatsby-transformer-sharp": "^2.4.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-body-classname": "^1.3.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
