--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -30,7 +30,8 @@
     "react-body-classname": "^1.3.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "sanitize-html-react": "^1.13.0"
+    "sanitize-html-react": "^1.13.0",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
