--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -24,7 +24,6 @@
     "graphiql": "^0.17.5",
     "json-server": "^0.16.1",
     "minify": "^5.1.1",
-    "nodemon": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-body-classname": "^1.3.1",
@@ -34,7 +33,8 @@
     "shortid": "^2.2.15"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "nodemon": "^2.0.3"
   },
   "keywords": [
     "gatsby"
