--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -13,6 +13,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Curl request
-        env:
-          NETLIFY_BUILD_HOOK: ${{ secrets.NETLIFY_BUILD_HOOK }}
-        run: curl -X POST -d {} NETLIFY_BUILD_HOOK
+        run: curl -X POST -d {} ${{ secrets.NETLIFY_BUILD_HOOK }}
