--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -24,29 +24,29 @@
   ],
   "dependencies": {
     "dotenv": "^8.2.0",
-    "gatsby": "^2.22.17",
-    "gatsby-image": "^2.4.6",
-    "gatsby-plugin-manifest": "^2.4.10",
-    "gatsby-plugin-offline": "^3.2.8",
-    "gatsby-plugin-react-helmet": "^3.3.3",
-    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby": "^2.32.11",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-offline": "^3.10.2",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-rest-api": "^0.2.3",
-    "gatsby-transformer-sharp": "^2.5.4",
+    "gatsby-transformer-sharp": "^2.12.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
     "react-helmet": "^5.2.1",
     "sanitize-html-react": "^1.13.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "prettier": "^1.19.1",
     "graphiql": "^0.17.5",
-    "json-server": "^0.16.1"
+    "json-server": "^0.16.3",
+    "nodemon": "^2.0.7",
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "gatsby"
