--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.11",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-image": "^1.1.1",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
