--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -23,18 +23,18 @@
     }
   ],
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.32.11",
-    "gatsby-image": "^2.11.0",
+    "dotenv": "10.0.0",
+    "gatsby": "3.6.2",
+    "gatsby-image": "3.6.0",
     "gatsby-plugin-image": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-manifest": "3.6.0",
+    "gatsby-plugin-offline": "4.6.0",
+    "gatsby-plugin-react-helmet": "4.6.0",
+    "gatsby-plugin-sharp": "3.6.0",
     "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-source-filesystem": "3.6.0",
     "gatsby-source-rest-api": "^0.2.3",
-    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-sharp": "3.6.0",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
@@ -45,7 +45,7 @@
     "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "graphiql": "^0.17.5",
+    "graphiql": "1.4.2",
     "json-server": "^0.16.3",
     "nodemon": "^2.0.7",
     "prettier": "^1.19.1"
