EK-427: Changed 50 to '50' in toml files

--- a/gatsby_fp/netlify.toml
+++ b/gatsby_fp/netlify.toml
@@ -1,4 +1,4 @@
 [build.environment]
-    GATSBY_CONCURRENT_DOWNLOAD = 50
+    GATSBY_CONCURRENT_DOWNLOAD = '50'
 [context.deploy-preview.environment]
     PEOPLEAPI_HOST = 'api.stevens.edu/people/faculty'
