--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -32,7 +32,7 @@
     "gatsby-plugin-react-helmet": "4.6.0",
     "gatsby-plugin-sharp": "3.6.0",
     "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "2.11.1",
+    "gatsby-source-filesystem": "^2.11.1",
     "gatsby-source-rest-api": "^0.2.3",
     "gatsby-transformer-sharp": "3.6.0",
     "node-fetch": "^2.6.1",
