--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -35,6 +35,7 @@
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-source-rest-api": "^0.2.3",
     "gatsby-transformer-sharp": "3.6.0",
+    "got": "^9.6.0",
     "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
