--- a/gatsby_fp/netlify.toml
+++ b/gatsby_fp/netlify.toml
@@ -1,2 +1,5 @@
 [context.deploy-preview.environment]
     PEOPLEAPI_HOST = 'api.stevens.edu/people/faculty'
+
+[[plugins]]
+package = "@netlify/plugin-gatsby"
