EK-428: Change deploy preview environment for testing

--- a/gatsby_fp/netlify.toml
+++ b/gatsby_fp/netlify.toml
@@ -1,5 +1,5 @@
 [context.deploy-preview.environment]
-    PEOPLEAPI_HOST = 'api.stevens.edu/people/faculty'
+    PEOPLEAPI_HOST = 'api.stevens.edu/people-dev2/faculty'
 
 [[plugins]]
 package = "@netlify/plugin-gatsby"
