--- a/gatsby_fp/netlify.toml
+++ b/gatsby_fp/netlify.toml
@@ -1,2 +1,2 @@
 [context.deploy-preview.environment]
-    PEOPLEAPI_HOST = 'api.stevens.edu/people/faculty'
+    PEOPLEAPI_HOST = 'api.stevens.edu/people-dev2/faculty'
