--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -24,29 +24,30 @@
   ],
   "dependencies": {
     "dotenv": "10.0.0",
-    "gatsby": "3.6.2",
-    "gatsby-plugin-image": "^1.7.0",
-    "gatsby-plugin-manifest": "3.6.0",
-    "gatsby-plugin-offline": "4.6.0",
-    "gatsby-plugin-react-helmet": "4.6.0",
-    "gatsby-plugin-sharp": "3.6.0",
+    "gatsby": "^3.10.2",
+    "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
     "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "^3.7.1",
-    "gatsby-transformer-sharp": "3.6.0",
-    "got": "^9.6.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
+    "got": "^11.8.2",
     "node-fetch": "^2.6.1",
+    "npm": "^7.20.3",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "sanitize-html-react": "^1.13.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
     "graphiql": "1.4.2",
     "json-server": "^0.16.3",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.12",
     "prettier": "^1.19.1"
   },
   "keywords": [
