--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -30,7 +30,7 @@
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-source-custom-api": "^2.1.4",
+    "gatsby-source-custom-api": "github:Stevens-EWS/stevens-gatsby-source-custom-api#142cbb36edee1d9d3759f46a656cd1251c3008e1",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "got": "^11.8.2",
