--- a/gatsby_fp/.gitignore
+++ b/gatsby_fp/.gitignore
@@ -70,3 +70,6 @@ yarn-error.log
 .vscode
 .vscode\settings.json
 
+# @netlify/plugin-gatsby ignores start
+netlify/functions/gatsby
+# @netlify/plugin-gatsby ignores end
