--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -30,7 +30,7 @@
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-source-custom-api": "github:Stevens-EWS/gatsby-source-custom-api#142cbb36edee1d9d3759f46a656cd1251c3008e1",
+    "gatsby-source-custom-api": "^2.1.4",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "got": "^11.8.2",
@@ -44,7 +44,6 @@
     "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "@netlify/plugin-gatsby": "^1.0.3",
     "graphiql": "1.4.2",
     "json-server": "^0.16.3",
     "nodemon": "^2.0.12",
