--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -30,11 +30,10 @@
     "gatsby-plugin-offline": "^4.10.0",
     "gatsby-plugin-react-helmet": "^4.10.0",
     "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-source-custom-api": "^2.1.4",
+    "gatsby-source-custom-api": "AndreasFaust/gatsby-source-custom-api#pull/30/head",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
     "got": "^11.8.2",
-    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-body-classname": "^1.3.1",
@@ -44,9 +43,9 @@
     "shortid": "^2.2.16"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^1.0.3",
     "graphiql": "1.4.2",
     "json-server": "^0.16.3",
-    "nodemon": "^2.0.12",
     "prettier": "^1.19.1"
   },
   "keywords": [
