--- a/gatsby_fp/netlify.toml
+++ b/gatsby_fp/netlify.toml
@@ -1,5 +1,8 @@
-[context.deploy-preview.environment]
-    PEOPLEAPI_HOST = 'api.stevens.edu/people/faculty'
+[context.deploy-preview]
+    environment = { PEOPLEAPI_HOST = 'api.stevens.edu/people-dev2/faculty'}
+
+[context.production]
+    environment = { PEOPLEAPI_HOST = 'api.stevens.edu/people-dev2/faculty'}
 
 [[plugins]]
 package = "@netlify/plugin-gatsby"
