--- a/gatsby_fp/package.json
+++ b/gatsby_fp/package.json
@@ -23,31 +23,28 @@
     }
   ],
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.32.11",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-image": "^1.1.1",
-    "gatsby-plugin-manifest": "^2.12.1",
-    "gatsby-plugin-offline": "^3.10.2",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.3",
-    "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "^2.11.1",
-    "gatsby-source-rest-api": "^0.2.3",
-    "gatsby-transformer-sharp": "^2.12.1",
-    "node-fetch": "^2.6.1",
+    "dotenv": "10.0.0",
+    "gatsby": "^3.13.1",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-manifest": "^3.10.0",
+    "gatsby-plugin-offline": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-source-custom-api": "^2.3.2",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "got": "^11.8.2",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-body-classname": "^1.3.1",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "sanitize-html-react": "^1.13.0",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
-    "graphiql": "^0.17.5",
+    "graphiql": "1.4.2",
     "json-server": "^0.16.3",
-    "nodemon": "^2.0.7",
     "prettier": "^1.19.1"
   },
   "keywords": [
